[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "null-memory"
version = "2.2.5"
description = "Persistent agent memory — cross-session, cross-instance knowledge for AI"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.11"
authors = [
    {name = "Pete Copeland"},
]
keywords = ["llm", "agent", "memory", "mcp", "persistence", "context"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
aleph = ["aleph-compiler>=0.5.0"]
embeddings = [
    "fastembed>=0.3.0",
    "numpy>=1.24.0",
]
nebula = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "umap-learn>=0.5.5",
    "hdbscan>=0.8.33",
    "websockets>=12.0",
    "numpy>=1.24.0",
]
dev = [
    "pytest>=8.0",
    "numpy>=1.24.0",
]

[project.scripts]
"null" = "null_memory.cli:main"

[project.urls]
Homepage = "https://alephnull.ai"
Repository = "https://github.com/alephnullai/null"
Issues = "https://github.com/alephnullai/null/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
null_memory = [
    "templates/*/identity.json",
    "templates/*/DESCRIPTION.md",
    # Deterministic-capture hooks — must ship in the wheel so a pip-installed
    # user can `null setup --hooks` (was #53/#68: scripts/ was omitted).
    "hooks/*.py",
    # Bundled Claude Code skills (e.g. /doorbell) — must ship in the wheel so
    # `null setup` can install them for a pip user (was #72: skills/ omitted).
    "skills/*/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
